--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,71 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+
+.full{
+    height: 100vh;
+}
+
+.full-red{
+    background-color: red;
+    position: relative;
+}
+
+.full-green{
+    background-color: green;
+    position: relative;
+}
+
+.full-yellow{
+    background-color: yellow;
+    position: relative;
+}
+
+.full-red img{
+    top: 50%;
+    bottom: 50%;
+    left: 50%;
+    right: 50%;
+    transform: translate(-50%, -50%);
+    position: absolute;
+    display: inline-block;
+}
+
+h1{
+    top: 80%;
+    left: 80%;
+    right: 80%;
+    transform: translate(-80%, -80%);
+    position: absolute;
+    display: inline-block;
+    width: 100%;
+    text-align: center;
+    font-family: 'Rowdies', cursive;
+    font-size: 3em;
+    color: #F1C321;
+}
+
+.full-green img{
+    top: 50%;
+    bottom: 50%;
+    left: 50%;
+    right: 50%;
+    transform: translate(-50%, -50%);
+    position: absolute;
+    display: inline-block;
+}
+
+.full-yellow img{
+    top: 50%;
+    bottom: 50%;
+    left: 50%;
+    right: 50%;
+    transform: translate(-50%, -50%);
+    position: absolute;
+    display: inline-block;
+}
+
+.full-yellow h1{
+    color: green;
+}
